--- a/RoguelikeDnD.vcxproj
+++ b/RoguelikeDnD.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="RoguelikeDnD.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Enums.h" />
     <ClInclude Include="Fighter.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="EnemyCharacter.h" />
