--- a/RoguelikeDnD.vcxproj.filters
+++ b/RoguelikeDnD.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Units.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Enums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
