--- a/RoguelikeDnD.vcxproj.filters
+++ b/RoguelikeDnD.vcxproj.filters
@@ -44,5 +44,11 @@
     <ClInclude Include="KeyStrokes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Room.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
