--- a/RoguelikeDnD.vcxproj
+++ b/RoguelikeDnD.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="EnemyCharacter.h" />
     <ClInclude Include="Goblin.h" />
+    <ClInclude Include="PlayerInfo.h" />
     <ClInclude Include="KeyStrokes.h" />
     <ClInclude Include="GameMap.h" />
     <ClInclude Include="PlayerCharacter.h" />
