Added Start screen, refactored Death screen, added floor progression, used flood algo to check for valid map
- fixed a bug where player can walk in emptyspace
- used text to ascii art "graffiti style" to make start screen, probably change later

--- a/RoguelikeDnD.vcxproj
+++ b/RoguelikeDnD.vcxproj
@@ -158,11 +158,13 @@
     <ClCompile Include="RoguelikeDnD.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DeathScreen.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="Fighter.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="EnemyCharacter.h" />
     <ClInclude Include="Goblin.h" />
+    <ClInclude Include="StartScreen.h" />
     <ClInclude Include="PlayerInfo.h" />
     <ClInclude Include="KeyStrokes.h" />
     <ClInclude Include="GameMap.h" />
