--- a/RoguelikeDnD.vcxproj
+++ b/RoguelikeDnD.vcxproj
@@ -158,12 +158,17 @@
     <ClCompile Include="RoguelikeDnD.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cultist.h" />
     <ClInclude Include="DeathScreen.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="Fighter.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="EnemyCharacter.h" />
     <ClInclude Include="Goblin.h" />
+    <ClInclude Include="Hobgoblin.h" />
+    <ClInclude Include="Skeleton.h" />
+    <ClInclude Include="Jackal.h" />
+    <ClInclude Include="Kobold.h" />
     <ClInclude Include="StartScreen.h" />
     <ClInclude Include="PlayerInfo.h" />
     <ClInclude Include="KeyStrokes.h" />
@@ -171,6 +176,8 @@
     <ClInclude Include="PlayerCharacter.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="Units.h" />
+    <ClInclude Include="Vulture.h" />
+    <ClInclude Include="Zombie.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
