started creating a help screen, added wasd movement
- also took care of some warnings

--- a/RoguelikeDnD.vcxproj
+++ b/RoguelikeDnD.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="EnemyCharacter.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="Equipment.h" />
+    <ClInclude Include="HelpScreen.h" />
     <ClInclude Include="Hobgoblin.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Message.h" />
