Added pickups and eating
-updated enemies
-refactored locations for characters
-Created a Helper class to hold all enums and structs and #includes
-updated how hunger is displayed

--- a/RoguelikeDnD.vcxproj
+++ b/RoguelikeDnD.vcxproj
@@ -161,17 +161,19 @@
     <ClInclude Include="Bugbear.h" />
     <ClInclude Include="Cultist.h" />
     <ClInclude Include="DeathScreen.h" />
-    <ClInclude Include="Enums.h" />
+    <ClInclude Include="Helper.h" />
     <ClInclude Include="Fighter.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="EnemyCharacter.h" />
     <ClInclude Include="Goblin.h" />
     <ClInclude Include="Equipment.h" />
+    <ClInclude Include="Gold.h" />
     <ClInclude Include="HelpScreen.h" />
     <ClInclude Include="Hobgoblin.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Message.h" />
     <ClInclude Include="Orc.h" />
+    <ClInclude Include="Ration.h" />
     <ClInclude Include="Skeleton.h" />
     <ClInclude Include="Jackal.h" />
     <ClInclude Include="Kobold.h" />
@@ -182,7 +184,7 @@
     <ClInclude Include="PlayerCharacter.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="Thug.h" />
-    <ClInclude Include="Units.h" />
+    <ClInclude Include="UnitsAndItems.h" />
     <ClInclude Include="Vulture.h" />
     <ClInclude Include="Weapon.h" />
     <ClInclude Include="Zombie.h" />
